[tool.poetry]
name = "calmmage-feature-bot"
version = "0.0.3" # split lib into app and handler, update to new bot-lib with calmapp extracted
description = ""
authors = ["Petr Lavrov <petrlavrov@calmmage.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0" # ugly because of langchain
# for stability, use frozen-app-name branch
#calmlib = { git = "https://github.com/calmmage/calmlib.git", branch = "main" }
bot-lib = { git = "https://github.com/calmmage/bot-lib.git", branch = "main" }
calmapp = { git = "https://github.com/calmmage/calmapp.git", branch = "main" }
pytest = "*"
# logging
loguru = "*"
toml = "*"


[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
tqdm = "*"
# pandas = "2.1.0"
black = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[template]
version = "0.0.2 "  # split lib into app and handler, update to new bot-lib with calmapp extracted
url = "https://github.com/calmmage/bot-lib-bot-template.git"
author = "Petr Lavrov <petrlavrov@calmmage.com>"
description = "update dockerfile and add basic contents"
